# Capstone

./: .gitignore  LICENSE  README.md  beginner_tutorials  setup.sh  temp.txt
References/: links.md
mie443_contest1/: CMakeLists.txt  debugcontestbumper1.pgm  debugcontestbumper1.yaml  debugcontestbumper2.pgm  debugcontestbumper2.yaml  debugcontestmap.pgm  debugcontestmap.yaml  debugcontestmap1.pgm  debugcontestmap1.yaml  map.pgm  map1.pgm  map2.pgm  map3.pgm  map4.pgm  mapgary.pgm  mapgary.yaml  maptest1.pgm  maptest1.yaml  new_map.pgm  new_map.yaml  referencemap.pgm  referencemap.yaml  run.sh  testcontestsim1.yaml
mie443_contest1/archived/: old_reference.cpp  setup.sh  temp.txt
mie443_contest1/include/: planners.h
mie443_contest1/launch/: simulation.launch
mie443_contest1/src/: contest1.cpp  frontier_exploration.cpp  planners.cpp  reference.cpp  ros_occupancy_grid.cpp  shape_detection.cpp
mie443_contest2/: run.sh
mie443_contest2/boxes_database/: coords.xml
mie443_contest2/include/: imagePipeline.h  navigation.h  robot_pose.h
mie443_contest2/maps/: my_map.pgm  my_map.yaml
mie443_contest2/src/: boxes.cpp  contest2.cpp  imagePipeline.cpp  navigation.cpp  record_cam_frame.cpp
mie443_contest2_gazebo/include/: imagePipeline.h
mie443_contest2_gazebo/src/: contest2.cpp  imagePipeline.cpp  navigation.cpp
mie443_contest3/mie443_contest3/include/: header.h
mie443_contest3/mie443_contest3/src/: contest3.cpp
submission/: mie443_contest1.rar
